--- a/class002/index.html
+++ b/class002/index.html
@@ -14,6 +14,9 @@
         안녕하세요. OH SOYEOP입니다.<br>
         현재 웹 <strong style="color: blue">프론트엔드</strong> 개발자로 활동 중입니다.
     </p>
+    <div class="box">
+        <p>안녕하세요 개발자입니다</p>
+    </div>
     <h4 style="text-align: center">경력사항</h4>
     <ul style="width: 200px; margin-left: auto; margin-right: auto">
         <li style="text-align: center">큐비콤 (2023.7 ~ 재직중)</li>
